- 19/01/2024
19. qmail.h: increased qmail-queue buffer to 8192 for performance (idea from
    Erwin Hoffman)
20. smtpd.c: fixed logerr() cloberring strnum
21. use env variable ALLOW_BARELF to allow bare LF from smtp clients without
    SMTP smuggling
- 23/01/2024
22. include buffer_defs.h for buffer size definitions (inspired by Erwin
    Hoffman).
- 31/02/2025
23. queue-fix.c: exit if file type (regular, dir, fifo) is different from
    expected
24. queue-fix.c: exit if not running as root
25. svctool.in: link BIGTODO in ezmlm/global_vars to
    control/global_vars/BIGTODO

* Mon Jan 01 2024 18:55:50 +0000 Manvendra Bhangui <indimail-mta@indimail.org> 3.0.6-1.1%{?dist}
Release 3.0.6-1.1 Start 25/10/2023 End 01/01/2024
======= Release Highlights ================================================
- Multiple bug fixes and optimizations
- Refactored ETRN, ATRN code
- New program rd-remote with the same interface as qmail-remote for
  redirecting remote mails
- Added half/full detached mode in qmail-send, todo-proc, slowq-send
- Added negate option for archival feature in qmail-queue
- Added env variable EXCLUDE_DKIMSIGN to exclude headers from
  DKIM signing
- qmta-send major bug fix with flagchan
- Added remote mail redirector rd-remote
- Fixed maildir.c bug which breaks maildirserial. Skip non-regular files
- New program printass to print entries in users/cdb, users/assign file
===========================================================================
- 24/10/2023
01. use matchregex.h from /usr/include/qmail
02. svctool: fixed create_smtp argument check
03. svctool: added /etc/clamd.d to backup.conf
04. mail_acl.c, qregex.c, smtpd.c, uacl.c: use matchregex.h from
    /usr/include/qmail
05. qmail-queue.c: added feature to negate regexp match for archive feature
06. create_services.in: added --secureauth option for smtp port 587
08. create_services.in: added --setuser-priv option for slowq service